--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,10 @@ MAX_FILE_SIZE=5242880
 # Rate Limiting
 RATE_LIMIT_WINDOW=15
 RATE_LIMIT_MAX_REQUESTS=100
+
+
+CLOUDINARY_CLOUD_NAME=dohqckspy
+CLOUDINARY_API_KEY=541687612462839
+CLOUDINARY_API_SECRET=cUEUf8znMTma5-Q6IiAFTj9P-ks
+CLOUDINARY_FOLDER=glojourn/documents
+CLOUDINARY_SIGNED_URL_TTL=900
